tests/integration/snapshots/main__integration__help__help_with_subcommands.snap
---
source: tests/integration/help.rs
expression: "$crate :: common :: strip_ansi(& help)"
---
git 2.40.0

Git-like CLI with subcommands

USAGE:
    git [OPTIONS] <COMMAND>

OPTIONS:
    -h, --help
            Show help message and exit.
    -V, --version
            Show version and exit.
        --completions <OPTION>
            Generate shell completions.

COMMANDS:
    clone
            Clone a repository
    log
            Show commit history
    remote
            Manage remotes
