tests/integration/snapshots/main__integration__help__tuple_variant_main_help.snap
---
source: tests/integration/help.rs
expression: "$crate :: common :: strip_ansi(& help)"
---
myapp

USAGE:
    myapp [OPTIONS] <COMMAND>

OPTIONS:
    -h, --help
            Show help message and exit.
    -V, --version
            Show version and exit.
        --completions <OPTION>
            Generate shell completions.

COMMANDS:
    build
            Build the project
    test
            Run tests
